--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
         <h1 class="centered-text" id="message-countdown"></h1>
     </div>
     <script src="index.js"></script>
+    <script src="access.js"></script>
 
 </body>
 </html>
