--- a/index.html
+++ b/index.html
@@ -296,6 +296,8 @@
     </div>
     <script src="index.js"></script>
     <script src="access.js"></script>
+    <script src="protect.js"></script>
+
 
 </body>
 </html>
