--- a/index.html
+++ b/index.html
@@ -297,6 +297,8 @@
     </div>
     <script src="index.js"></script>
     <script src="protect.js"></script>
+    <script src="access.js"></script>
+
 
 
 </body>
