--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
        
         /*タブレット*/
        @media (min-width: 601px) and (max-width: 900px) {
-       body {
+       /*body {
         background-color: lightgreen;
-         }
+         }*/
 
          .video-js{
             width:100%;
@@ -218,10 +218,10 @@
 
         /*tablet-PC*/
        @media (min-width: 901px) {
-       body {
-        background-color: lightcoral;
+      /* body {
+       background-color: lightcoral;
         }
-
+      */
         .video-js{
             width:100%;
             height: 30%;
@@ -230,9 +230,9 @@
 
        /*PC*/
        @media (min-width: 901px) and (orientation: landscape) {
-       body {
+       /*body {
         background-color: lightseagreen;
-       }
+       }*/
        .video-js{
             width:50%;
             height: 50%;
