--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
             display: none;
         }
     </style>
+    <script>
+history.pushState(null, '', 'http://anythingsave.html.xdomain.jp/');
+
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/video.js/5.19.1/video.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/shaka-player/2.1.0/shaka-player.compiled.js"></script>
