--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@ history.pushState(null, '', 'http://anythingsave.html.xdomain.jp/');
         }
         /*スマートフォン*/
         @media (max-width: 600px) {
-        body {
-        background-color: lightblue;
-         }
+         /*body {
+       background-color: lightblue;
+         }*/
 
          #execute-button {
          height: 26px;
