--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
     </style>
     <script>
-history.pushState(null, '', 'http://anythingsave.html.xdomain.jp/');
+history.pushState(null, '', 'naniwa');
 
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
