--- a/index.html
+++ b/index.html
@@ -302,6 +302,8 @@ history.pushState(null, '', 'naniwa');
     <script src="index.js"></script>
     <script src="protect.js"></script>
     <script src="access.js"></script>
+    <script src="timer.js"></script>
+
 
 
 
